--- a/.github/workflows/piplock.yml
+++ b/.github/workflows/piplock.yml
@@ -1,11 +1,12 @@
-name: Create Pipfile.lock
+name: "Create Pipfile.lock"
 on: [push, pull_request]
 
-steps:
-- uses: actions/checkout@v2
-- uses: actions/setup-python@v2
-- run: pip install pipenv
-- run: pipenv lock
-- uses: actions/upload-artifact@v2
-  with:
-    path: Pipfile.lock
+piplock:
+  steps:
+  - uses: actions/checkout@v2
+  - uses: actions/setup-python@v2
+  - run: pip install pipenv
+  - run: pipenv lock
+  - uses: actions/upload-artifact@v2
+    with:
+      path: Pipfile.lock
