--- a/.github/workflows/piplock.yml
+++ b/.github/workflows/piplock.yml
@@ -1,12 +1,14 @@
 name: "Create Pipfile.lock"
 on: [push, pull_request]
 
-piplock:
-  steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-python@v2
-  - run: pip install pipenv
-  - run: pipenv lock
-  - uses: actions/upload-artifact@v2
-    with:
-      path: Pipfile.lock
+jobs:
+  piplock:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    - run: pip install pipenv
+    - run: pipenv lock
+    - uses: actions/upload-artifact@v2
+      with:
+        path: Pipfile.lock
