--- a/.github/workflows/piplock.yml
+++ b/.github/workflows/piplock.yml
@@ -8,7 +8,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - run: pip install pipenv
-    - run: pipenv lock
+    - run: pipenv lock --requirements
     - uses: actions/upload-artifact@v2
       with:
+        name: "Pipfile lock"
         path: Pipfile.lock
