--- a/.github/workflows/piplock.yml
+++ b/.github/workflows/piplock.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
-    - run: pip install pipenv
+    - run: pip install pipenv --pre
     - run: pipenv lock --requirements
     - uses: actions/upload-artifact@v2
       with:
