--- a/.github/workflows/update-pipfile.yml
+++ b/.github/workflows/update-pipfile.yml
@@ -5,6 +5,7 @@ on:
   push:
     paths:
     - 'Pipfile'
+    - '.github/workflows/update-pipfile.yml'
 
 jobs:
   piplock:
@@ -14,6 +15,7 @@ jobs:
     - uses: actions/setup-python@v2
     - run: pip install wheel
     - run: pip install pipenv
+    - run: rm Pipfile.lock
     - run: pipenv lock --requirements
     - uses: actions/upload-artifact@v2
       with:
