--- a/.github/workflows/update-pipfile.yml
+++ b/.github/workflows/update-pipfile.yml
@@ -2,6 +2,10 @@ name: "Update Pipfile.lock"
 on:
   schedule:
     - cron: '00 15 * * 1' # Every monday on 15:00 UTC
+  push:
+    paths:
+    - 'Pipfile'
+    - '.github/workflows/update-pipfile.yml'
 
 jobs:
   piplock:
