--- a/.github/workflows/update-pipfile.yml
+++ b/.github/workflows/update-pipfile.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - run: pip install wheel
-    - run: pip install pipenv
+    - run: pip install pipenv==2018.11.26
     - run: rm Pipfile.lock
     - run: pipenv lock
     - uses: actions/upload-artifact@v2
