Update pipfile: networkx, PyMySQL and pygame

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 opencv-python= "*"
 ipython = "*"
-networkx = "~=2.3"
+networkx = "*"
 azure-core = "*"
 azure-common = "*"
 azure-nspkg = "~=3.0"
@@ -39,9 +39,8 @@ redis = "*"
 "s2sphere" = "*"
 "subprocess32" = "*"
 tenacity = "*"
-tensorflow = "==2.2"
 keras_applications = "*"
-PyMySQL = "~=0.9"
+PyMySQL = "**"
 Werkzeug = "*"
 "backports.lzma" = "*"
 Flask-Cors = "*"
@@ -67,7 +66,7 @@ paramiko = "*"
 aiohttp = "*"
 lru-dict = "*"
 scikit-image = "*"
-pygame = "==2.0.0.dev8"
+pygame = "==2.0.0.dev24"
 pprofile = "*"
 pyprof2calltree = "*"
 pre-commit = "*"
