Pipfile: Fix syntax

--- a/Pipfile
+++ b/Pipfile
@@ -40,7 +40,7 @@ redis = "*"
 "subprocess32" = "*"
 tenacity = "*"
 keras_applications = "*"
-PyMySQL = "**"
+PyMySQL = "*"
 Werkzeug = "*"
 "backports.lzma" = "*"
 Flask-Cors = "*"
