Pipfile: Update pygame, sympy

--- a/Pipfile
+++ b/Pipfile
@@ -66,7 +66,7 @@ paramiko = "*"
 aiohttp = "*"
 lru-dict = "*"
 scikit-image = "*"
-pygame = "==2.0.0.dev24"
+pygame = "*"
 pprofile = "*"
 pyprof2calltree = "*"
 pre-commit = "*"
@@ -92,7 +92,7 @@ requests = "*"
 setproctitle = "*"
 six = "*"
 smbus2 = "*"
-sympy = "!=1.6.1"
+sympy = "*"
 tqdm = "*"
 Cython = "*"
 PyYAML = "*"
