Pipfile: Add tensorflow back in

--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ redis = "*"
 "s2sphere" = "*"
 "subprocess32" = "*"
 tenacity = "*"
+tensorflow = "*"
 keras_applications = "*"
 PyMySQL = "*"
 Werkzeug = "*"
