Pipfile: Add modules back

--- a/Pipfile
+++ b/Pipfile
@@ -12,10 +12,24 @@ scons = "*"
 pylint = "*"
 jinja2 = "*"
 pre-commit = "*"
+azure-storage-blob = "*"
+parameterized = "*"
 
 [packages]
 Cython = "*"
+crcmod = "*"
 websocket_client = "*"
+pycapnp = "*"
+raven = "*"
+psutil = "*"
+smbus2 = "*"
+libusb1 = "*"
+setproctitle = "*"
+sympy = "*"
+hexdump = "*"
+nose = "*"
+atomicwrites = "*"
+tqdm = "*"
 
 [requires]
 python_version = "3.8"
