Pipfile: Alphabetize, add aenum & lru-dict

--- a/Pipfile
+++ b/Pipfile
@@ -4,44 +4,46 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-opencv-python = "*"
-keras_applications = "*"
+aenum = "*"
+azure-storage-blob = "~=2.1"
 "backports.lzma" = "*"
+coverage = "*"
+dictdiffer = "*"
+fastcluster = "*"
+jinja2 = "*"
+keras_applications = "*"
+lru-dict = "*"
+matplotlib = "*"
+opencv-python = "*"
+parameterized = "*"
+pre-commit = "*"
+pycurl = "*"
+pylint = "*"
 reverse_geocoder = "*"
 scipy = "*"
 scons = "*"
-pylint = "*"
-jinja2 = "*"
-pre-commit = "*"
-azure-storage-blob = "~=2.1"
-parameterized = "*"
-matplotlib = "*"
-dictdiffer = "*"
-pycurl = "*"
-coverage = "*"
 tenacity = "*"
-fastcluster = "*"
 
 [packages]
-Cython = "*"
-crcmod = "*"
-websocket_client = "*"
-pycapnp = "*"
-pyzmq = "*"
-raven = "*"
-psutil = "*"
-smbus2 = "*"
-libusb1 = "*"
-setproctitle = "*"
-sympy = "*"
-hexdump = "*"
-nose = "*"
 atomicwrites = "*"
-tqdm = "*"
+crcmod = "*"
+Cython = "*"
+hexdump = "*"
+json-rpc = "*"
+libusb1 = "*"
+Logentries = {git = "https://github.com/commaai/le_python.git",ref = "feaeacb48f7f4bdb02c0a8fc092326d4e101b7f2"}
+nose = "*"
+psutil = "*"
+pycapnp = "*"
 PyJWT = "*"
 pyserial = "*"
-json-rpc = "*"
-Logentries = {git = "https://github.com/commaai/le_python.git",ref = "feaeacb48f7f4bdb02c0a8fc092326d4e101b7f2"}
+pyzmq = "*"
+raven = "*"
+setproctitle = "*"
+smbus2 = "*"
+sympy = "*"
+tqdm = "*"
+websocket_client = "*"
 
 [requires]
 python_version = "3.8"
