--- a/.github/workflows/sim_tests.yaml
+++ b/.github/workflows/sim_tests.yaml
@@ -1,14 +1,15 @@
 name: simulator
 on:
-  schedule:
-  - cron: '0 * * * *'
+  push:
+    paths:
+    - 'Pipfile'
+    - '.github/workflows'
 
 jobs:
   docker_build:
     name: build container
     runs-on: ubuntu-16.04
     timeout-minutes: 50
-    if: github.event_name == 'schedule' && github.repository == 'commaai/openpilot'
     steps:
     - uses: actions/checkout@v2
       with:
