--- a/.github/workflows/sim_tests.yaml
+++ b/.github/workflows/sim_tests.yaml
@@ -3,7 +3,7 @@ on:
   push:
     paths:
     - 'Pipfile'
-    - '.github/workflows/'
+    - '.github/workflows/sim_tests.yaml'
 
 jobs:
   docker_build:
