Always test simulator on this branch

--- a/.github/workflows/sim_tests.yaml
+++ b/.github/workflows/sim_tests.yaml
@@ -1,9 +1,5 @@
 name: simulator
-on:
-  push:
-    paths:
-    - 'Pipfile'
-    - '.github/workflows/sim_tests.yaml'
+on: push
 
 jobs:
   docker_build:
