--- a/.github/workflows/update-pipfile.yml
+++ b/.github/workflows/update-pipfile.yml
@@ -12,10 +12,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - run: sudo apt-get install libssl-dev libcurl4-openssl-dev
+    - run: |
+        sudo apt update
+        sudo apt-get install libssl-dev libcurl4-openssl-dev
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - run: pip install wheel
     - run: pip install pipenv
     - run: pipenv lock --requirements
