Update pipfile and pipfile.lock

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 opencv-python= "*"
 ipython = "*"
-networkx = "~=2.3"
+networkx = "*"
 azure-core = "*"
 azure-common = "*"
 azure-nspkg = "~=3.0"
@@ -39,9 +39,9 @@ redis = "*"
 "s2sphere" = "*"
 "subprocess32" = "*"
 tenacity = "*"
-tensorflow = "==2.2"
+tensorflow = "*"
 keras_applications = "*"
-PyMySQL = "~=0.9"
+PyMySQL = "*"
 Werkzeug = "*"
 "backports.lzma" = "*"
 Flask-Cors = "*"
@@ -67,7 +67,7 @@ paramiko = "*"
 aiohttp = "*"
 lru-dict = "*"
 scikit-image = "*"
-pygame = "==2.0.0.dev8"
+pygame = "*"
 pprofile = "*"
 pyprof2calltree = "*"
 pre-commit = "*"
@@ -96,7 +96,7 @@ requests = "*"
 setproctitle = "*"
 six = "*"
 smbus2 = "*"
-sympy = "!=1.6.1"
+sympy = "*"
 tqdm = "*"
 Cython = "*"
 PyYAML = "*"
@@ -122,4 +122,4 @@ onnxruntime = "*"
 timezonefinder = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
