Pipfile: Remove Tensorflow, unlock blosc and pycapnp

--- a/Pipfile
+++ b/Pipfile
@@ -39,7 +39,6 @@ redis = "*"
 "s2sphere" = "*"
 "subprocess32" = "*"
 tenacity = "*"
-tensorflow = "*"
 keras_applications = "*"
 PyMySQL = "*"
 Werkzeug = "*"
@@ -75,7 +74,7 @@ mypy = "*"
 parameterized = "*"
 torch = "*"
 torchsummary = "*"
-blosc = "==1.9.2"
+blosc = "*"
 
 [packages]
 atomicwrites = "*"
@@ -85,7 +84,7 @@ hexdump = "*"
 libusb1 = "*"
 numpy = "*"
 psutil = "*"
-pycapnp = "==1.0.0b1"
+pycapnp = "*"
 cryptography = "*"
 python-dateutil = "*"
 pyzmq = "*"
