Pipfile: Remove Tensorflow, unlock blosc and pycapnp

--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,10 @@ ipython = "*"
 networkx = "*"
 azure-core = "*"
 azure-common = "*"
-azure-nspkg = "~=3.0"
-azure-storage-blob = "~=2.1"
-azure-storage-common = "~=2.1"
-azure-storage-nspkg = "~=3.1"
+azure-nspkg = "*"
+azure-storage-blob = "*"
+azure-storage-common = "*"
+azure-storage-nspkg = "*"
 boto = "*"
 "boto3" = "*"
 control = "*"
@@ -39,7 +39,6 @@ redis = "*"
 "s2sphere" = "*"
 "subprocess32" = "*"
 tenacity = "*"
-tensorflow = "*"
 keras_applications = "*"
 PyMySQL = "*"
 Werkzeug = "*"
@@ -75,8 +74,8 @@ mypy = "*"
 parameterized = "*"
 torch = "*"
 torchsummary = "*"
-blosc = "==1.9.2"
-segmentation-models-pytorch = "==0.1.2"
+blosc = "*"
+segmentation-models-pytorch = "*"
 pyopencl = "*"
 
 [packages]
@@ -87,7 +86,7 @@ hexdump = "*"
 libusb1 = "*"
 numpy = "*"
 psutil = "*"
-pycapnp = "==1.0.0b1"
+pycapnp = "*"
 cryptography = "*"
 python-dateutil = "*"
 pyzmq = "*"
